x11 backend: Don't rebuild all keybindings every time a different keyboard device is used.

ref: https://gitlab.gnome.org/GNOME/mutter/-/issues/398

New muffin uses xinput2 instead of xlib for doing key grabs,
and is incredibly slow at it in comparison. NewKeyboardNotify
can be sent when using auxillary mouse buttons or the volume
encoder on a keyboard. It ends up causing a very noticeable
UI freeze when it happens. This seems to only affect nvidia.